made it work but slower?!