@@ -1,75 +1,64 @@
 package net.torvald.terrarum.worlddrawer
 
+import jdk.incubator.vector.FloatVector
 import kotlin.math.roundToInt
-
-//import jdk.incubator.vector.FloatVector
 
 
 /**
- * Get your panama JDK for linux/mac/windows at https://jdk.java.net/panama/
+ * Get and compile your OpenJDK-Panama for linux/mac/windows at https://jdk.java.net/panama/
+ * Or use pre-built ones in https://github.com/minjaesong/openjdk13-vectorintrinsic/tree/master
+ *
+ * NOTE: Panama's new vectors are all immutable.
+ * NOTE2: Class inlining vastly improves the performance
+ *
+ * -XX:TypeProfileLevel=121 -XX:+UseVectorApiIntrinsics --add-modules=jdk.incubator.vector
  *
  * Created by minjaesong on 2019-05-20.
  */
-class Cvec(val vec: FloatArray) {
+inline class Cvec constructor(val vec: FloatVector) {
 
-    constructor(r: Float, g: Float, b: Float, a: Float) : this(floatArrayOf(r, g, b, a))
-    constructor(scalar: Float) : this(FloatArray(4) { scalar })
-    constructor() : this(FloatArray(4) { 0f })
+    //constructor(floatArray: FloatArray) : this(FloatVector.fromArray(SPECIES, floatArray, 0))
+    constructor(r: Float, g: Float, b: Float, a: Float) : this(FloatVector.scalars(SPECIES, r, g, b, a))
+    constructor(scalar: Float) : this(FloatVector.scalars(SPECIES, scalar, scalar, scalar, scalar))
+    constructor() : this(FloatVector.zero(SPECIES))
 
-    private val epsilon = 1f / 512f
-
-    fun cpy(): Cvec = Cvec(this.vec)
-
-    fun setTo(scalar: Float) = setTo(FloatArray(4) { scalar })
-    fun setTo(other: Cvec) = setTo(other.vec)
-    fun setTo(other: FloatArray): Cvec {
-        for (i in 0..3) {
-            this.vec[i] = other[i]
-        }
-        return this
+    companion object {
+        private val EPSILON = 1f / 512f
+        private val SPECIES = FloatVector.SPECIES_256
     }
 
-    infix fun mul(scalar: Float): Cvec = mul(FloatArray(4) { scalar })
-    infix fun mul(other: Cvec) = mul(other.vec)
+    //fun cpy(): Cvec = Cvec(this.vec)
 
-    fun mul(other: FloatArray): Cvec {
-        for (i in 0..3) {
-            this.vec[i] *= other[i]
-        }
-        return this
-    }
+    fun multiply(other: FloatVector) = Cvec(vec.mul(other))
+    infix operator fun times(other: Cvec) = multiply(other.vec)
+    infix operator fun times(scalar: Float) = Cvec(vec.mul(scalar))
 
-    fun max(other: Cvec): Cvec = max(other.vec)
+    fun subtract(other: FloatVector) = Cvec(vec.sub(other))
+    infix operator fun minus(other: Cvec) = subtract(other.vec)
+    infix operator fun minus(scalar: Float) = Cvec(vec.sub(scalar))
 
-    fun max(other: FloatArray): Cvec {
-        for (i in 0..3) {
-            this.vec[i] = if (this.vec[i] >= other[i]) this.vec[i] else other[i]
-        }
-        return this
-    }
+    fun addition(other: FloatVector) = Cvec(vec.add(other))
+    infix operator fun plus(other: Cvec) = addition(other.vec)
+    infix operator fun plus(scalar: Float) = Cvec(vec.add(scalar))
+
+    fun maximum(other: FloatVector): Cvec = Cvec(vec.max(other))
+    infix fun max(other: Cvec): Cvec = maximum(other.vec)
 
     /**
      * true if at least one element in the vector is not zero.
      */
-    fun nonZero(): Boolean {
-        var oracc = 0 // set to 1 if the vector element is zero
-        for (i in 0..3) {
-            if (vec[i] in 0f..epsilon)
-                oracc = oracc or 1
-        }
-
-        return (oracc != 0)
-    }
+    fun nonZero(): Boolean = vec.mulLanes() != 0f
 
     fun toRGBA8888(): Int {
         var acc = 0
         for (i in 0..3)
-            acc += vec[i].coerceIn(0f, 1f).times(255f).roundToInt().shl(8 * (3 - i))
+            acc += vec.lane(i).coerceIn(0f, 1f).times(255f).roundToInt().shl(8 * (3 - i))
 
         return acc
     }
 
+    /*override fun equals(other: Any?): Boolean {
+        return this.vec.equal((other as Cvec).vec).allTrue()
+    }*/
 }
 
-
-//hg clone http://hg.openjdk.java.net/panama/dev/
